@@ -1,7 +1,8 @@
 Repository version (see the web page for the last modification date)
 
 * Bugfix: for objects with the deconstructors, memory block were allocated in a non-aligned fashion
-* Internal CPU efficiency of Priority queue is improved (loser trees in external mergers are integrated)
+* Internal CPU efficiency of Stxxl priority queue is improved (loser trees in external mergers are integrated)
+* Fixed bug with conversion of const/non-const iterators, implemented comparison and difference operations on const/non-const iterators (for vector, map, and deque) 
 
 ------------------------------------------
 Version 1.0d (16 January 2007)
